--- a/src/pages/SO2TP_Settings.page
+++ b/src/pages/SO2TP_Settings.page
@@ -3,7 +3,8 @@
     <apex:form >
         <apex:pageBlock >
             <apex:pageBlockButtons >
-                <apex:commandButton action="{!Save}" value="Save"/>
+                <apex:commandButton action="{!save}" value="Save"/>
+                <apex:commandButton action="{!startAggregation}" value="Start aggregation"/>
             </apex:pageBlockButtons>
             <apex:pageBlockSection columns="2" collapsible="false" title="Twitter settings">
                 <apex:inputField required="true" value="{!so2tpSettings.SO2TP_twitterAccessToken__c}"/>
